# EK-SMS

./: .env.example  docker-compose.yml  pnpm-lock.yaml  vercel.json
.github/workflows/: ci.yml  deploy-prod.yml  deploy-staging.yml
apps/api/: alembic.ini  package.json  pyproject.toml
apps/api/alembic/: env.py
apps/api/scripts/: dev.cmd  dev.sh
apps/api/src/app/core/: config.py
apps/api/src/app/modules/users/: __init__.py  respository.py  schemas.py  service.py
apps/api/tests/: test_health.py
apps/web/: package.json
